--- a/shopping/index.html
+++ b/shopping/index.html
@@ -14,6 +14,7 @@
             <button id="add-button">Add to cart</button>
             <ul id="shopping-list">
             </ul>
+<button id="clear-button">Clear Cart</button>
         </div>
         <script src="index.js" type="module"></script>
     </body>
