--- a/shopping/index.html
+++ b/shopping/index.html
@@ -15,7 +15,11 @@
             <ul id="shopping-list">
             </ul>
 <button id="clear-button">Clear Cart</button>
+
 <button id="mark-as-purchased">Mark as Purchased</button>
+<ul id="purchased-list">
+
+</ul>
         </div>
         <script src="index.js" type="module"></script>
     </body>
